--- a/assets/root/static/css.css
+++ b/assets/root/static/css.css
@@ -31,6 +31,10 @@ ul li {
 #item-list li {
     float: left;
     padding: 1em;
+    width: 130px;
+    height: 130px;
+    border: 1px dotted #ddd;
+    margin: 0.5em;
 }
 
 .clear {
